# mars

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  README.md  WINDOWS_PORT.md  architecture_overview.md  delighters_design.md  final_results.md  install.sh  instructions.md  key_design.md  leftovers.md  memory_product_ideas.md  ssh_strategy.md  strategy.md  workflows_design.md
.claude/memory/: INDEX.md  ares-dev.md
.github/workflows/: ci.yml
design_ideas/: README.md  agentic_inline.md  ergonomics_audit.md  final_report.md  future_directions.md  instructions.md  mars_future_directions.md  memory_design_alternatives.md  memory_ideas.md  memory_product_ideas.md  self_reflection.md  speed_design.md  ssh_strategy.md  strategy.md  windows-parity-handoff.md  workflows_eng.md
eval/: RUNBOOK.md  compute.py  cost.py  lib.py  lift.py  rejudge.py  report.py  run_a.py  run_all.py  run_b.py  tables.py
eval/datasets/: REPORT_base.md  axis_a.jsonl  axis_b.jsonl  lift.jsonl
eval/error_analysis/: axis_a_translation.md  axis_b_self_knowledge.md  corrective_memory.md
eval/gold/: paraphrases.jsonl  self_qa.jsonl  translate.jsonl
paper/: REVIEW.md  VIDEO_RUNBOOK.md  main.blg  main.tex  refs.bib  translation.txt
paper/sections/: 0-abstract.tex  1-intro.tex  2-agent.tex  3-system.tex  4-eval.tex  5-related.tex  6-conclusion.tex  6-future.tex  7-limitations.tex  a-appendix.tex  fig-architecture.tex
src/: agent.rs  app.rs  banner.rs  briefing.rs  broker.rs  broker_stub.rs  buffer.rs  config.rs  fleet.rs  layout.rs  llm_log.rs  main.rs  mode.rs  osc133.rs  palette.rs  pane.rs  persona.rs  project.rs  prompts.rs  retrieval.rs  retrieval_stub.rs  session.rs  ssh.rs  tab.rs  terminal.rs  themes.rs  tiers.rs  tiers_default.json  tuning.rs  ui.rs  worklog.rs
src/prompts/: ask_system.md  auto_name_system.md  capture_goals.md  cursor_insert.md  docs_context_preamble.md  explain_failure.md  explain_this.md  mission_system.md  name_session_system.md  persona_default.md  persona_preamble.md  shift_batch.md  shift_brief.md  translate_examples.md  translate_reasoning_cap.md  translate_system.md  watch_hint_exit.md  watch_hint_quiet.md  watch_system.md
src/sys/: mod.rs  unix.rs  windows.rs
src/themes/: eclipse.json  hacker.json  mission-control.json  paper.json
tools/: check-platform-isolation.sh
