[package]
# `mars` is taken on crates.io, so the package/crate name is `mars-terminal`.
# The installed binary stays `mars` regardless (see [[bin]] below).
name = "mars-terminal"
version = "0.4.0"
edition = "2021"
# The dependency tree pulls edition2024 crates → a modern toolchain is required.
# Declaring it makes cargo say "requires rustc 1.85" instead of a cryptic dep error.
rust-version = "1.85"
description = "A terminal editor, multiplexer, and built-in AI agent in one binary — non-modal and Emacs-compatible, with tmux-style persistent sessions."
license = "MIT"
readme = "README.md"
repository = "https://github.com/anjishnu/mars"
homepage = "https://github.com/anjishnu/mars"
authors = ["Anjishnu Kumar <anjishnu.kr@gmail.com>"]
keywords = ["cli", "ai", "llm", "terminal", "tui"]
categories = ["command-line-utilities", "text-editors"]
# Keep the published package lean: ship only source + README + LICENSE, not the
# design docs, .claude/, or scratch. (target/ and .git are auto-excluded.)
# Leading "/" anchors to the package root (gitignore glob semantics) so a bare
# "README.md" doesn't also sweep in design_ideas/README.md. install.sh is REQUIRED:
# broker.rs embeds it via include_str!, so the crate won't compile without it.
include = ["src/**/*.rs", "src/prompts/*.md", "/Cargo.toml", "/README.md", "/LICENSE", "/CHANGELOG.md", "/install.sh"]

[[bin]]
name = "mars"
path = "src/main.rs"

[features]
# `memory` is the whole retrieval subsystem (command memory, docs corpus,
# redaction). Default-on; `cargo build --no-default-features` produces a
# memory-free terminal that must also pass --selfcheck (retrieval_stub.rs).
default = ["memory"]
memory = []

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["bracketed-paste", "serde"] }
ropey = "1.6"
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
portable-pty = "0.8"
vt100 = "0.15"
arboard = "3"
libc = "0.2"
base64 = "0.22"

# vt100 0.15 has a debug-only integer underflow when the scrollback view is
# deeper than one screen (grid.rs visible_rows: `rows_len - scrollback_offset`).
# Release builds wrap and render the correct view; this matches that behavior
# in dev builds for vt100 only. (0.16 fixes it but conflicts with ratatui's
# pinned unicode-width.) Our own crate keeps overflow checks on.
[profile.dev.package.vt100]
overflow-checks = false
